--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 	#searchZone #div12{ width:942px; height:52px; background:#f6ffdd; margin:0px auto; border:1px solid #97bf2b; padding:5px 6px 3px 10px; position:relative;}
 	#searchZone #div12 #form a{ float:right; font-size:12px; color:#000; line-height:24px; text-align:center; background:url(../img/btn_bg.gif) repeat-x; display:inline-block; width:80px; height:24px; margin-left:4px; border-radius:2px; border:1px solid #ff9525; overflow:hidden;}
 	#searchZone #div12 #form a:hover{ text-decoration:underline;}
-	#searchZone #div12 #form1 #text{ width:402px; height:25px; border:1px solid #ff9525; color:#b5b5b5; position:absolute; left:10px;}
+	#searchZone #div12 #form1 #text{ width:402px; height:25px; border:1px solid #ff9525; color:#b5b5b5; position:absolute; left:10px; text-indent: 10px;}
 	#searchZone #div12 #form1 #search{ width:78px; height:27px; border-radius:2px; border:1px solid #ff9525; background:url(../img/btn_bg.gif) repeat-x; overflow:hidden; font-size:14px; text-align:center; line-height:27px; position:absolute; left:420px;}
 	#searchZone #div12 #form1 #search:hover{ cursor:pointer; }
 	
